bk_ida/gccida/c0/purge_addressof_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3499:68: error: unknown type name 'hash_table_0'; did you mean 'hash_table'?
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
                                                                   ^~~~~~~~~~~~
                                                                   hash_table
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/hashtable.h:40:19: note: 'hash_table' declared here
typedef struct ht hash_table;
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3499:7: error: conflicting types for 'purge_addressof_1'
bool  purge_addressof_1( rtx *loc, rtx insn, int force, int store, hash_table_0 *ht) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:293:13: note: previous declaration is here
static bool purge_addressof_1 PARAMS ((rtx *, rtx, int, int,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3508:4: error: expected ';' after expression
rtx tem_0; // [rsp+68h] [rbp-A8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3508:5: error: use of undeclared identifier 'tem_0'
rtx tem_0; // [rsp+68h] [rbp-A8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3509:4: error: expected ';' after expression
rtx p_0; // [rsp+70h] [rbp-A0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3509:5: error: use of undeclared identifier 'p_0'
rtx p_0; // [rsp+70h] [rbp-A0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3510:4: error: expected ';' after expression
rtx p; // [rsp+78h] [rbp-98h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3510:5: error: use of undeclared identifier 'p'
rtx p; // [rsp+78h] [rbp-98h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3511:4: error: expected ';' after expression
rtx pa; // [rsp+78h] [rbp-98h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3511:5: error: use of undeclared identifier 'pa'
rtx pa; // [rsp+78h] [rbp-98h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3516:4: error: expected ';' after expression
rtx z; // [rsp+90h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3516:5: error: use of undeclared identifier 'z'
rtx z; // [rsp+90h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3518:4: error: expected ';' after expression
rtx tem; // [rsp+98h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3518:5: error: use of undeclared identifier 'tem'; did you mean 'tee'?
rtx tem; // [rsp+98h] [rbp-78h] 
    ^~~
    tee
/usr/include/x86_64-linux-gnu/bits/fcntl-linux.h:416:18: note: 'tee' declared here
extern __ssize_t tee (int __fdin, int __fdout, size_t __len,
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3519:4: error: expected ';' after expression
rtx tema; // [rsp+98h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3519:5: error: use of undeclared identifier 'tema'
rtx tema; // [rsp+98h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3521:4: error: expected ';' after expression
rtx sub_0; // [rsp+A8h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3521:5: error: use of undeclared identifier 'sub_0'
rtx sub_0; // [rsp+A8h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/function.c:3530:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+DCh] [rbp-34h] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/purge_addressof_1/src/obj/function.o] Error 1
